--- a/css/style.css
+++ b/css/style.css
@@ -228,8 +228,59 @@ section {
     margin-top: 20px;
 }
 .box{
+    width: 100%;
     background-color: white;
+    border: solid 1px black;
+    padding: 10px 20px;
 }
+.template3{
+    width: 100%;
+    float: left;
+    background-color: #5d6939;
+}
+.template3_header{
+    width: 100%;
+    float: left;
+    margin: 60px 0px;
+    text-align: center;
+}
+.template3_header h2{
+    font-weight: bolder;
+    color: #fff;
+}
+.template3_header p{
+    font-size: 18px;
+    margin-top: 30px;
+    padding: 0px 150px;
+    color: #fff;
+}
+.btn4{
+    padding: 15px 25px;
+    font-size: 18px;
+    border-radius: 40px;
+    color: #5d6939;
+    background-color: #fff;
+    margin: 30px 5px;
+}
+.btn4:hover{
+    color: #5d6939;
+    background-color: #d5cbcb;
+}
+.btn5{
+    padding: 15px 25px;
+    font-size: 18px;
+    border-radius: 40px;
+    background: transparent;
+    color: #fff;
+    backdrop-filter: blur(4px) saturate(180%);
+     margin: 30px 5px;
+}
+.btn5:hover{
+    color: #fff;
+    background-color: rgb(0 0 0 / 50%);
+}
+
+
 .footer_main{
     width: 100%;
     float: left;
